<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Grenadeal</string>
    <string name="title_activity_location_business">Map</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_item_list" translatable="false">ItemListActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_map_business">Map</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="title_activity_item_list_view">Businesses</string>


    <string name="connexion_button">Connection</string>
    <string name="subscribe_button">Subscribe</string>
    <string name="or_subscribe_with">Or subscribe with :</string>
    <string name="search_button">Search</string>
    <string name="activate_gps">The application needs GPS activation to detect nearby shops. Activate ?</string>
    <string name="yes">Yes</string>
    <string name="error">There was an error :</string>

    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message" translatable="false">Generating InstanceID token&#8230;</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="book">Book</string>

    <!-- RezaDiscount -->
    <!--<string name="facebook_app_id">1518479935118372</string>-->
    <!-- Weal -->
    <string name="facebook_app_id" translatable="false">934436326647123</string>


    <string name="lastname">Last name</string>
    <string name="firstname">First name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="profile">Profile</string>
    <string name="shops">Favorite shops</string>
    <string name="agenda">Agenda</string>
    <string name="find">Find</string>
    <string name="deal">Deals</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_deal" translatable="false">DealActivity</string>
    <string name="limited_deal">Limited deal</string>
    <string name="custom_deal">Custom deal</string>
    <string name="closest_deal">Closest deal</string>
    <string name="best_deal">Best deal</string>
    <string name="title_activity_find" translatable="false">FindActivity</string>
    <string name="password_repeat">Repeat password</string>
    <string name="password_problem_match">Login/password not matching</string>
    <string name="password_problem_empty">Password can\'t be empty</string>
    <string name="facebook_error">There was a Facebook error. Please try again later</string>
    <string name="connexion_problem">Connection problem. Your login/password doesn\'t match</string>
    <string name="logout">Logout</string>
    <string name="password_forgotten">Password forgotten ?</string>
    <string name="reset_password">Reset password</string>
    <string name="last_name_empty">Please fill last name field</string>
    <string name="first_name_empty">Please fill first name field</string>
    <string name="email_empty">Please fill email field</string>
    <string name="birthday_empty">Please fill birthday field</string>
    <string name="password_email_success">Password recover has been sent to your email address</string>
    <string name="email_incorrect">Email is incorrect</string>
    <string name="waiting">Wait a minute :)</string>
    <string name="title_activity_agenda" translatable="false">AgendaActivity</string>

    <!--Sign in error-->
    <string name="api_error_auth_1">There was a facebook error, Try again later</string>
    <string name="api_error_auth_2">There was an internal error, please try again later</string>
    <string name="api_error_auth_3">There was a facebook error, Try again later</string>
    <string name="api_error_auth_4">Login/Password combination isn\'t valid</string>

    <!--Sign up errors-->
    <string name="api_error_reg_1">There\'s already a user associated with this email address</string>
    <string name="api_error_reg_2">Password cannot be empty</string>
    <string name="api_error_reg_3">Birthday provided is not valid</string>
    <string name="api_error_reg_4">Password must have between 6 and 30 characters</string>


    <!-- Accessibility -->
    <string name="image">image</string>
    <string name="app_image">GrenaDeal Logo</string>


</resources>
