<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/discount"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/discount" />


        <item
            android:id="@+id/magasin"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/profile" />


        <item
            android:id="@+id/agenda"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/agenda" />

        <item
            android:id="@+id/find"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/find" />

        <item
            android:id="@+id/deal"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/deal" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
    </group>


</menu>
