<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_screen_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appology.grenadeal.activities.ActivitySignIn">


    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp" />


    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwd_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_field"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/connexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwd_field"
        android:layout_marginTop="10dp"
        android:background="@color/red4"
        android:text="@string/connexion_button"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/inscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connexion"
        android:layout_marginTop="10dp"
        android:background="@color/red4"
        android:text="@string/subscribe_button"
        android:textColor="@color/white" />


    <Button
        android:id="@+id/password_forgotten"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inscription"
        android:layout_marginTop="10dp"
        android:background="@color/red4"
        android:text="@string/password_forgotten"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_forgotten" />


    <RadioGroup
        android:id="@+id/url_rb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/error"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/dev_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="Dev" />

        <RadioButton
            android:id="@+id/preprod_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Preprod" />
    </RadioGroup>


</RelativeLayout>
